--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "rumdl",
   "displayName": "rumdl - Markdown Linter",
   "description": "Fast Rust-based Markdown linter with real-time diagnostics and auto-fixes",
-  "version": "0.1.6",
-  "publisher": "rumdl",
+  "version": "0.0.1",
+  "publisher": "rvben",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rumdl/rumdl-vscode.git"
+    "url": "https://github.com/rvben/rumdl-vscode.git"
   },
   "icon": "images/icon.png",
   "galleryBanner": {
