--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rumdl",
   "displayName": "rumdl - Markdown Linter",
   "description": "Fast Rust-based Markdown linter with real-time diagnostics and auto-fixes",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "publisher": "rvben",
   "license": "MIT",
   "repository": {
@@ -36,10 +36,18 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-    "languages": [{
-      "id": "markdown",
-      "extensions": [".md", ".markdown", ".mdown", ".mkd", ".mdx"]
-    }],
+    "languages": [
+      {
+        "id": "markdown",
+        "extensions": [
+          ".md",
+          ".markdown",
+          ".mdown",
+          ".mkd",
+          ".mdx"
+        ]
+      }
+    ],
     "commands": [
       {
         "command": "rumdl.fixAll",
@@ -92,12 +100,16 @@
         },
         "rumdl.rules.select": {
           "type": "array",
-          "items": {"type": "string"},
+          "items": {
+            "type": "string"
+          },
           "description": "Rules to enable"
         },
         "rumdl.rules.ignore": {
           "type": "array",
-          "items": {"type": "string"},
+          "items": {
+            "type": "string"
+          },
           "description": "Rules to disable"
         },
         "rumdl.server.path": {
@@ -106,13 +118,23 @@
         },
         "rumdl.server.logLevel": {
           "type": "string",
-          "enum": ["error", "warn", "info", "debug", "trace"],
+          "enum": [
+            "error",
+            "warn",
+            "info",
+            "debug",
+            "trace"
+          ],
           "default": "info",
           "description": "Log level for rumdl server"
         },
         "rumdl.trace.server": {
           "type": "string",
-          "enum": ["off", "messages", "verbose"],
+          "enum": [
+            "off",
+            "messages",
+            "verbose"
+          ],
           "default": "off",
           "description": "Trace LSP messages"
         },
