--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,14 +6,19 @@
     "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
+  ],
+  "extends": [
+    "prettier"
   ],
   "rules": {
     "@typescript-eslint/semi": "warn",
-    "curly": "warn",
+    "curly": "error",
     "eqeqeq": "warn",
     "no-throw-literal": "warn",
-    "semi": "off"
+    "semi": "off",
+    "prettier/prettier": "error"
   },
   "ignorePatterns": [
     "out",
