--- a/package.json
+++ b/package.json
@@ -171,11 +171,12 @@
     "vsce:package": "vsce package"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.74.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vscode/test-electron": "^2.2.0",
     "eslint": "^9.28.0",
@@ -186,6 +187,7 @@
     "prettier": "^3.5.3",
     "ts-loader": "^9.4.1",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
     "vsce": "^2.15.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^6.0.1"
