Add better test coverage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rumdl",
   "displayName": "rumdl - Markdown Linter",
   "description": "Fast Rust-based Markdown linter with real-time diagnostics and auto-fixes",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "publisher": "rvben",
   "license": "MIT",
   "repository": {
@@ -166,10 +166,13 @@
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
     "fmt": "npm run format && npm run lint:fix",
-    "test": "node ./out/test/runTest.js",
+    "test": "vscode-test",
+    "test:nolint": "npm run compile-tests && npm run compile && vscode-test",
     "test:unit": "npm run compile-tests && mocha ./out/test/suite/*.test.js",
     "test:watch": "npm run compile-tests && mocha ./out/test/suite/*.test.js --watch",
     "test:coverage": "nyc npm test",
+    "test:unit:coverage": "nyc npm run test:unit",
+    "coverage:report": "nyc report --reporter=html && open coverage/index.html",
     "download-rumdl": "node scripts/download-rumdl.js",
     "download-rumdl-current": "node scripts/download-rumdl.js --current-platform-only",
     "update-rumdl": "node scripts/download-rumdl.js --latest",
@@ -190,7 +193,9 @@
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.2.0",
+    "c8": "^10.1.3",
     "chai": "^5.2.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
