fix: use consistent enable/disable terminology in VSCode extension
- Rename rules.select to rules.enable
- Rename rules.ignore to rules.disable
- Update all references in configuration and client

This makes the VSCode extension consistent with rumdl's CLI and config
file terminology, following markdownlint's convention.

--- a/package.json
+++ b/package.json
@@ -104,14 +104,14 @@
           "type": "string",
           "description": "Path to rumdl configuration file"
         },
-        "rumdl.rules.select": {
+        "rumdl.rules.enable": {
           "type": "array",
           "items": {
             "type": "string"
           },
-          "description": "Rules to enable"
+          "description": "Rules to enable (if specified, only these rules will be active)"
         },
-        "rumdl.rules.ignore": {
+        "rumdl.rules.disable": {
           "type": "array",
           "items": {
             "type": "string"
