feat(vscode): enhance UI with context menu, quick fix all, and status bar improvements
- Add context menu entry for 'Fix All' on markdown files
- Show issue count in status bar with fixable/non-fixable distinction
- Update status bar in real-time as issues are resolved
- Add test for format-on-save functionality
- Remove custom autoFixOnSave in favor of VSCode's built-in formatOnSave

--- a/package.json
+++ b/package.json
@@ -150,6 +150,24 @@
           "description": "Remove duplicate diagnostics (useful if multiple markdown linters are active)"
         }
       }
+    },
+    "menus": {
+      "editor/context": [
+        {
+          "when": "resourceExtname == .md && rumdl.enabled",
+          "command": "rumdl.fixAll",
+          "group": "1_modification@1"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "rumdl.fixAll",
+          "when": "resourceExtname == .md"
+        },
+        {
+          "command": "rumdl.fixAllWorkspace"
+        }
+      ]
     }
   },
   "scripts": {
