--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^5.2.2",
     "@types/glob": "^8.0.0",
+    "@types/iarna__toml": "^2.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "24.x",
     "@types/sinon": "^17.0.4",
@@ -231,6 +232,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "vscode-languageclient": "^9.0.1"
   },
   "nyc": {
