feat: implement autoFixOnSave configuration
- Add rumdl.format.autoFixOnSave configuration option to automatically
  fix markdown issues when saving files
- Implement onWillSaveTextDocument handler that applies code actions
  before save when the setting is enabled
- Update ConfigurationManager to expose isAutoFixOnSaveEnabled()
- Fix formatting test to provide required FormattingOptions (tabSize)
- Make Logger defensive to handle uninitialized state in tests
- Add comprehensive test coverage for autoFixOnSave behavior

All tests passing (88 passing, 8 pending, 0 failing)

--- a/package.json
+++ b/package.json
@@ -148,6 +148,11 @@
           "type": "boolean",
           "default": true,
           "description": "Remove duplicate diagnostics (useful if multiple markdown linters are active)"
+        },
+        "rumdl.format.autoFixOnSave": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically fix markdown issues when saving a file"
         }
       }
     },
