feat(vscode): implement native format provider and quick wins
Quick Wins Implementation:
- Add native VS Code format provider (DocumentFormattingEditProvider)
- Enable standard "Format Document" command and editor.formatOnSave
- Add workspace trust configuration to restrict settings in untrusted workspaces
- Add keybindings for common actions:
  - Cmd/Ctrl+Shift+R: Fix all issues in current file
  - Cmd/Ctrl+Shift+Alt+R: Fix all workspace issues
  - Cmd/Ctrl+Shift+.: Open config file
- Add "Open Config File" command with auto-discovery and creation

Format Provider Changes:
- Create src/formatter.ts with RumdlFormattingProvider
- Register provider in extension.ts activation
- Works with VS Code's native formatting system
- Remove autoFixOnSave feature (was added yesterday, not widely used)
- Users should use standard editor.formatOnSave instead

Tests:
- Fix formatOnSave and directFormat tests to use format provider API
- Remove autoFixOnSave test suite
- All 90 tests passing

This aligns rumdl-vscode with industry standard patterns used by
Prettier, ESLint, Ruff, and other formatters.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   "engines": {
     "vscode": "^1.74.0"
   },
+  "capabilities": {
+    "untrustedWorkspaces": {
+      "supported": "limited",
+      "description": "rumdl only lints files when the workspace is trusted. In untrusted workspaces, diagnostics are disabled.",
+      "restrictedConfigurations": [
+        "rumdl.server.path",
+        "rumdl.configPath"
+      ]
+    }
+  },
   "categories": [
     "Linters",
     "Other"
@@ -89,6 +99,12 @@
         "command": "rumdl.checkStatus",
         "title": "Check Extension Status",
         "category": "rumdl"
+      },
+      {
+        "command": "rumdl.openConfigFile",
+        "title": "Open Configuration File",
+        "category": "rumdl",
+        "icon": "$(file)"
       }
     ],
     "configuration": {
@@ -148,11 +164,6 @@
           "type": "boolean",
           "default": true,
           "description": "Remove duplicate diagnostics (useful if multiple markdown linters are active)"
-        },
-        "rumdl.format.autoFixOnSave": {
-          "type": "boolean",
-          "default": false,
-          "description": "Automatically fix markdown issues when saving a file"
         }
       }
     },
@@ -173,7 +184,25 @@
           "command": "rumdl.fixAllWorkspace"
         }
       ]
-    }
+    },
+    "keybindings": [
+      {
+        "command": "rumdl.fixAll",
+        "key": "ctrl+shift+r",
+        "mac": "cmd+shift+r",
+        "when": "editorTextFocus && editorLangId == markdown"
+      },
+      {
+        "command": "rumdl.fixAllWorkspace",
+        "key": "ctrl+shift+alt+r",
+        "mac": "cmd+shift+alt+r"
+      },
+      {
+        "command": "rumdl.openConfigFile",
+        "key": "ctrl+shift+.",
+        "mac": "cmd+shift+."
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run download-rumdl && npm run package",
