fix(schema): update schema sync for kebab-case properties
- Add sync-schema step to auto-release workflow to keep schema
  in sync when new rumdl versions are released
- Fix sync-schema.js to quote kebab-case properties in TypeScript
  interface (e.g., 'line-length' instead of line-length)
- Regenerate schema and TypeScript types with kebab-case properties
- Add schema sync tests to verify kebab-case convention

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -73,7 +73,10 @@ jobs:
           npm run clean-rumdl
           npm run download-rumdl
           npm run verify-rumdl
-        
+
+      - name: Sync schema from new rumdl binary
+        run: npm run sync-schema
+
       - name: Run tests
         run: |
           npm run lint
