fix: add rumdl.fixOnSave setting to control auto-fix on save
The LSP server's will_save_wait_until handler auto-fixed on every
manual save because the extension hardcoded enableAutoFix: true in
initialization options. Users had no way to disable this, even with
editor.formatOnSave: false.

Add rumdl.fixOnSave setting (default: false) that controls the
enableAutoFix initialization option. Users who want auto-fix on save
can opt in via this setting or the standard editor.codeActionsOnSave
with source.fixAll.rumdl.

Closes #98

--- a/package.json
+++ b/package.json
@@ -116,6 +116,11 @@
           "default": true,
           "description": "Enable rumdl linting"
         },
+        "rumdl.fixOnSave": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically fix all auto-fixable problems when saving a file. For more control, use editor.codeActionsOnSave with source.fixAll.rumdl instead."
+        },
         "rumdl.configPath": {
           "type": "string",
           "description": "Path to rumdl configuration file"
