--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -140,6 +140,7 @@ jobs:
     permissions:
       contents: read
     strategy:
+      fail-fast: false
       matrix:
         include:
           - code-target: win32-x64
